update po import url to .xlsm

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -167,13 +167,13 @@
     
       <!-- PO Import Template -->
       <div class="feature col">
-        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/POs%20and%20SOs/Sage%20Import%20Template/_Template/POtoSO.xlsx">
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/POs%20and%20SOs/Sage%20Import%20Template/_Template/POtoSO.xlsm">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#receipt-cutoff"/></svg>
           </div>
         </a>
         <h2>PO Import Template</h2>
-        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/POs%20and%20SOs/Sage%20Import%20Template/_Template/POtoSO.xlsx" class="icon-link d-inline-flex align-items-center">
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/POs%20and%20SOs/Sage%20Import%20Template/_Template/POtoSO.xlsm" class="icon-link d-inline-flex align-items-center">
           Open PO Import Template
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
