--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -11,14 +11,11 @@
         <table class="table text-left table-bordered" id="deskScheduleTable">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col">Order</th>
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
-                    <th scope="col">Lot Number</th>
+                    <th scope="col">Lot No.</th>
                     <th scope="col">Quantity</th>
-                    <th scope="col">When Short</th>
-                    <th scope="col">Line</th>
-                    <th scope="col" class="noPrint">Total Short</th>
+                    <th scope="col">Short</th>
                     <th scope="col" class="noPrint">Entered In Sage</th>
                     {% if user.is_staff %}<th scope="col" class="noPrint">Manage</th>{% endif %}
                 </tr>
@@ -30,9 +27,7 @@
                     <td>{{ item.item_description }}</td>
                     <td>{{ item.lot }}</td>
                     <td>{{ item.quantity|floatformat:1 }} gal</td>
-                    <td>{{ item.hourshort|floatformat:1 }}</td>
-                    <td>{{ item.line }}</td>
-                    <td class="noPrint">{{ item.threewkshort }}</td>
+                    <td>{{ item.hourshort|floatformat:1 }} hr</td>
                     <td class="noPrint">{% if not item.when_entered.receiptdate %}Not Entered{% else %}{{ item.when_entered.receiptdate }}{% endif %}</td>
                     {% if user.is_staff %}
                         <td class="noPrint">
