--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -17,7 +17,7 @@
     </li>
 </ul>
 <div class="tab-content">
-    <div class="tab-pane fade show" id="desk1Container">
+    <div class="tab-pane fade show active" id="desk1Container">
         <br><a href="/core/blend-schedule?blend-area=Desk_1">View Desk 1 Schedule</a>
         {% include 'core/blendschedules/deskoneschedule.html' %}
     </div>
@@ -25,7 +25,7 @@
         <br><a href="/core/blend-schedule?blend-area=Desk_2">View Desk 2 Schedule</a>
         {% include 'core/blendschedules/desktwoschedule.html' %}
     </div>
-    <div class="tab-pane fade show active" id="horixContainer">
+    <div class="tab-pane fade show" id="horixContainer">
         <br><a href="/core/blend-schedule?blend-area=Hx">View Horix Schedule</a>
         <br>{% include 'core/blendschedules/horixschedule.html' %}
     </div>
