--- a/app/core/templates/core/reports/upcomingrunsreport/subcomponents.html
+++ b/app/core/templates/core/reports/upcomingrunsreport/subcomponents.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% extends 'base.html' %}
 {% if no_runs_found %}
     <div class='text-center'>
         <h1> No runs found. Please try another report.</h1>
