--- a/app/prodverse/templates/prodverse/productionschedule.html
+++ b/app/prodverse/templates/prodverse/productionschedule.html
@@ -45,9 +45,9 @@
           Issue Sheets
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="/core/issue-sheets/INLINE/nextDay" id="inlineIssueSheetLink">Inline</a></li>
-          <li><a class="dropdown-item" href="/core/issue-sheets/PD LINE/nextDay" id="pdlineIssueSheetLink">PD Line</a></li>
-          <li><a class="dropdown-item" href="/core/issue-sheets/JB LINE/nextDay" id="jblineIssueSheetLink">JB Line</a></li>
+          <li><a class="dropdown-item" href="/core/batch-issue-table/INLINE/nextDay" id="inlineIssueSheetLink">Inline</a></li>
+          <li><a class="dropdown-item" href="/core/batch-issue-table/PD LINE/nextDay" id="pdlineIssueSheetLink">PD Line</a></li>
+          <li><a class="dropdown-item" href="/core/batch-issue-table/JB LINE/nextDay" id="jblineIssueSheetLink">JB Line</a></li>
         </ul>
       </div>
     {% endif %}
