Update blendshortages to include hx links

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -17,7 +17,11 @@
             <br>
             <button id="create_list" style="display:none">Create Count List</button>
             <br> 
-            <br> 
+            <br>
+            <a href="/core/blend-schedule/?blend-area=Hx">Horix Blends</a> | 
+            <a href="/core/blend-schedule/?blend-area=Dm">Drum Blends</a> | 
+            <a href="/core/blend-schedule/?blend-area=Totes">Tote Blends</a>
+            <br><br>
         </div>
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
