Add ALL issue tbls link to dropdown.

--- a/app/prodverse/templates/prodverse/productionschedule.html
+++ b/app/prodverse/templates/prodverse/productionschedule.html
@@ -48,6 +48,8 @@
           <li><a class="dropdown-item" href="/core/batch-issue-table/INLINE/nextDay" id="inlineIssueSheetLink" target="_blank">Inline</a></li>
           <li><a class="dropdown-item" href="/core/batch-issue-table/PD LINE/nextDay" id="pdlineIssueSheetLink" target="_blank">PD Line</a></li>
           <li><a class="dropdown-item" href="/core/batch-issue-table/JB LINE/nextDay" id="jblineIssueSheetLink" target="_blank">JB Line</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="/core/batch-issue-table/all/nextDay" id="jblineIssueSheetLink" target="_blank">ALL ISSUE SHEETS</a></li>
         </ul>
       </div>
     {% endif %}
