--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -1,9 +1,9 @@
 {% load static %}
 {% if desk_two_blends %}
     <div class="buttonContainer text-center">
-        <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_2';">
+        {% comment %} <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_2';">
             Clear Completed Blends
-        </button>
+        </button> {% endcomment %}
     </div>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered" id="deskScheduleTable">
