--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -23,7 +23,7 @@
                 <br>
                 <div class="table-responsive-sm">
                     <table class="table text-left table-bordered">
-                        <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
+                        <thead class="thead-dark" style="">
                             <tr>
                                 <th scope="col" class="text-center">Blend</th>
                                 <th scope="col" class="text-center">Description</th>
@@ -66,7 +66,7 @@
                 <br>
                 <div class="table-responsive-sm">
                     <table class="table text-left table-bordered">
-                        <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
+                        <thead class="thead-dark" style="">
                             <tr>
                                 <th scope="col" class="text-center">Blend</th>
                                 <th scope="col" class="text-center">Description</th>
@@ -113,7 +113,7 @@
             <br>
             <div class="table-responsive-sm">
                 <table class="table text-left table-bordered">
-                    <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
+                    <thead class="thead-dark" style="">
                         <tr>
                             <th scope="col" class="text-center">Blend</th>
                             <th scope="col" class="text-center">Description</th>
