Right-align numbers.

--- a/app/core/templates/core/reports/countsandtransactionsreport.html
+++ b/app/core/templates/core/reports/countsandtransactionsreport.html
@@ -41,7 +41,7 @@
                     <b>{{ item.transactioncode }}</b>
                 {% endif %}
             </td>
-            <td>{{ item.variance }}</td>
+            <td style="text-align:right;">{{ item.variance }}</td>
         </tr>
     {% endfor %}
 </table>
