--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -15,6 +15,14 @@
         <div class='text-center'>
             <h1>Blend Shortages</h1>
             <br>
+            <tr>
+                <td>
+                    <label for="id_filter_criteria">Filter:</label>
+                </td>
+                <td>
+                    <input type="text" name="filter_criteria" maxlength="100" required="" id="id_filter_criteria" class="ui-autocomplete-input" autocomplete="off">
+                </td>
+            </tr>
             <button id="create_list" style="display:none">Create Count List</button>
             <br> 
             <br>
@@ -23,7 +31,7 @@
             <a href="/core/blend-schedule/?blend-area=Totes">Tote Blends</a>
             <br><br>
         </div>
-        <table class="table text-left table-bordered table-hover">
+        <table class="table text-left table-bordered table-hover" id="displayTable">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
                     {% if user.is_staff %}<th scope="col" class="text-center"></th>{% endif %}
@@ -43,7 +51,7 @@
                 </tr>
             </thead>
             {% for item in blend_shortages_queryset %}
-                <tr {% if item.advance_blend == "yes" %}class="advanceRow"{% endif %}{% if item.needs_count %}needsCount="needsCount"{% endif %}>
+                <tr {% if item.advance_blend == "yes" %}class="advanceRow filterableRow"{% else %}class="filterableRow"{% endif %}{% if item.needs_count %}needsCount="needsCount"{% endif %}>
                     {% if user.is_staff %}<td class='text-center'>
                         <input type="checkbox" class="checkbox" itemcode={{ item.component_item_code }} name={{ item.component_item_code }}></input>
                     </td>{% endif %}
