--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -18,9 +18,13 @@
                 </tr>
             </thead>
             {% for item in desk_one_blends %}
-                <tr class="{{item.line}}Row tableBodyRow">
+                <tr class="{{item.line}}Row tableBodyRow {% if item.short_chemical %}shortWarnRow{% endif %}">
                     <td class="orderCell">{{ item.order }}</td>
-                    <td>{{ item.item_code }}</td>
+                    {% if item.short_chemical %}   
+                        <td>{{ item.item_code }} - short: {{ item.short_chemical }}</td>
+                    {% else %}
+                        <td>{{ item.item_code }}</td>
+                    {% endif %}
                     <td>{{ item.item_description }}</td>
                     <td>{{ item.lot }}</td>
                     <td>{{ item.quantity|floatformat:1 }} gal</td>
