Add blendcomponentconsumption report.

--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -28,6 +28,7 @@
                             <option reportval="Bill-Of-Materials" class="reportOption">Bill Of Materials</option>
                             <option reportval="Blend-What-If" class="reportOption">Blend What-If</option>
                             <option reportval="Item-Component-What-If" class="reportOption">Item Component What-If</option>
+                            <option reportval="Component-Usage-For-Scheduled-Blends">Component Usage For Scheduled Blends</option>
                         </select>
                     </td>
                 </tr>
