--- a/app/core/templates/core/reports/blendcomponentconsumption.html
+++ b/app/core/templates/core/reports/blendcomponentconsumption.html
@@ -10,7 +10,7 @@
 <div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
     <div class='text-center'>
         <h1>{{ item_code }} Upcoming Inventory Changes</h1>
-        <h3><em>{{ component_onhandquantity }} currently on hand</em></h3>
+        <h3><em>{{ component_onhandquantity|floatformat:2 }} currently on hand</em></h3>
     </div>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered">
