--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -29,6 +29,7 @@
                             <option reportval="Blend-What-If" class="reportOption">Blend What-If</option>
                             <option reportval="Item-Component-What-If" class="reportOption">Item Component What-If</option>
                             <option reportval="Component-Usage-For-Scheduled-Blends">Component Usage For Scheduled Blends</option>
+                            <option reportval="Transaction-Mismatches">Transaction Mismatches</option>
                         </select>
                     </td>
                 </tr>
