--- a/app/core/templates/core/reports/upcomingrunsreport/subcomponents.html
+++ b/app/core/templates/core/reports/upcomingrunsreport/subcomponents.html
@@ -10,6 +10,8 @@
         <table class="table text-left table-bordered">
             <thead class="thead-dark">
                 <tr>
+                    <th scope="col">PO</th>
+                    <th scope="col">Item</th>
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
                     <th scope="col">SubComponent</th>
@@ -23,6 +25,8 @@
             </thead>
             {% for item in upcoming_runs %}
                 <tr>
+                    <td>{{ item.po_number }}</td>
+                    <td>{{ item.item_code }}</td>
                     <td>{{ item.component_item_code }}</td>
                     <td>{{ item.component_item_description }}</td>
                     <td>{{ item.subcomponent_item_code }}</td>
