--- a/app/core/templates/core/inventorycounts/countrecordreport.html
+++ b/app/core/templates/core/inventorycounts/countrecordreport.html
@@ -29,6 +29,8 @@
                     <th scope="col">Counted By</th>
                     <th scope="col">CID</th>
                     <th scope="col">Variance Cost</th>
+                    <th scope="col">oldest receiptno</th>
+                    <th scope="col">oldest receiptdate</th>
                 </tr>
             </thead>
             {% for item in count_records_queryset %}
@@ -42,6 +44,8 @@
                     <td>{{ item.counted_by }}</td>
                     <td>{{ item.collection_id }}</td>
                     <td {% if item.variance_cost < 0 %}class="negativeCell moneyCell"{% else %}class="moneyCell"{% endif %}>$   {{ item.variance_cost|floatformat:2 }}</td>
+                    <td>{{ item.receiptno }}</td>
+                    <td>{{ item.receiptdate|date:"m/d/Y" }}</td>
                 </tr>
             {% endfor %}
             <tr>
