Remove reordering from the all schedules page.

--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -18,7 +18,7 @@
                 </tr>
             </thead>
             {% for item in desk_one_blends %}
-                <tr class="{{item.line}}Row tableBodyRow {% if item.short_chemical %}shortWarnRow{% endif %}">
+                <tr class="{{item.line}}Row tableBodyRow {{ item.blend_area }} {% if item.short_chemical %}shortWarnRow{% endif %}">
                     <td class="orderCell">{{ item.order }}</td>
                     {% if item.short_chemical %}   
                         <td>{{ item.item_code }} - short: {{ item.short_chemical }}</td>
