Begin working on countlist autosave and fix issue table.

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -14,7 +14,7 @@
     </dialog>
     
     <div>
-        <form action="" method=POST>
+        <form id="countListForm" action="" method=POST>
             <div class="text-center buttonContainer noPrint">
                 <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save</button>
             </div>
