Add a tank select field to the blend schedule page.

--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -11,6 +11,7 @@
                 <tr>
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
+                    <th scope="col">Tank</th>
                     <th scope="col">Lot No.</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Short</th>
@@ -26,6 +27,33 @@
                         <td>{{ item.item_code }}</td>
                     {% endif %}
                     <td>{{ item.item_description }}</td>
+                    <td>
+                        <select class="tankSelect">
+                            <option selected>{{ item.tank }}</option>
+                            <option>300gal Polish Tank</option>
+                            <option>400gal Stainless Tank</option>
+                            <option>King W/W Tank</option>
+                            <option>LET Drum</option>
+                            <option>Oil Bowl</option>
+                            <option>MSR Tank</option>
+                            <option>Startron Tank</option>
+                            <option>Startron Amber Tank</option>
+                            <option>Tank 11</option>
+                            <option>Tank 12</option>
+                            <option>Tank 13</option>
+                            <option>Tank M</option>
+                            <option>Tank M1</option>
+                            <option>Tank M2</option>
+                            <option>Tank M3</option>
+                            <option>Tank N</option>
+                            <option>Tank P1</option>
+                            <option>Tank P2</option>
+                            <option>Tank P3</option>
+                            <option>Teak Oil Tank</option>
+                            <option>Tote</option>
+                            <option>Waterproofing Tank</option>
+                        </select>
+                    </td>
                     <td>{{ item.lot }}</td>
                     <td>{{ item.quantity|floatformat:1 }} gal</td>
                     <td>{{ item.hourshort|floatformat:1 }}</td>
