--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -11,7 +11,7 @@
                 <tr>
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
-                    <th scope="col">Tank</th>
+                    <th scope="col">Mix Vessel</th>
                     <th scope="col">Lot No.</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Short</th>
