--- a/app/templates/navbars/all-users-navbar-items.html
+++ b/app/templates/navbars/all-users-navbar-items.html
@@ -11,6 +11,8 @@
         <li><a class="dropdown-item" href="/core/lookup-lot-numbers/">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/prodverse/spec-sheet-lookup/">Spec Sheets</a></li>
         <li><a class="dropdown-item" href="/core/component-shortages">Component Shortages</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="/core/display-raw-material-label">Create Raw Material Label</a></li>
     </ul>
     <li class="nav-item">
         <a class="nav-link" href="/core/feedback/">Feedback</a>
