--- a/app/core/templates/core/rawmateriallabel.html
+++ b/app/core/templates/core/rawmateriallabel.html
@@ -17,29 +17,26 @@
     </div>
     <div class="labelContainer">
         <!-- Content for the first half of the page -->
-        <input type="text" id="id_item_code" class="item_code_field entryfield" enterkeyhint="search" placeholder="Item Num..."></input>
-        <input type="text" id="id_item_description" class="item_description_field entryfield" enterkeyhint="search" placeholder="Description..."></input>
+        <input type="text" id="id_item_code_1" class="item_code_field entryfield" enterkeyhint="search" placeholder="Item Num..."></input>
+        <input type="text" id="id_item_description_1" class="item_description_field entryfield" enterkeyhint="search" placeholder="Description..."></input>
         <div class="quantityFields">
-            <input type="number" id="quantityInput" class="quantityField">
-            <select id="unitsSelect">
-                <option selected>lbs</option>
-                <option>gal</option>
-            </select>
+            <input type="number" class="quantityField">
+            <h2 id="topUnitsField" class="unitsField"></h2>
         </div>
         <h2>{{ today_date|date:"m/d/Y" }}</h2>
-        <div class="location_field"></div>
+        <div class="location_field" id="location_field_1"></div>
     </div>
-      
+
     <div class="labelContainer">
         <!-- Content for the first half of the page -->
-        <h2 id="bottomSectionItemCode" class="item_code_field"><em>Item Num...</em></h2>
-        <h2 id="bottomSectionItemDescription" class="item_description_field"><em>Item Description...</em></h2>
+        <input type="text" id="id_item_code_2" class="item_code_field entryfield" enterkeyhint="search" placeholder="Item Num..."></input>
+        <input type="text" id="id_item_description_2" class="item_description_field entryfield" enterkeyhint="search" placeholder="Description..."></input>
         <div class="quantityFields">
-            <h2 id="bottomQuantityField"></h2>
-            <h2 id="bottomUnitsField">lbs</h2>
+            <input type="number" class="quantityField">
+            <h2 id="bottomUnitsField" class="unitsField"></h2>
         </div>
         <h2>{{ today_date|date:"m/d/Y" }}</h2>
-        <div class="location_field"></div>
+        <div class="location_field" id="location_field_2"></div>
     </div>
 </div>
 
