--- a/app/core/templates/core/blendschedules/drumschedule.html
+++ b/app/core/templates/core/blendschedules/drumschedule.html
@@ -18,17 +18,17 @@
                     <td>{{ item.po_number }}</td>
                     <td>{{ item.component_item_code }}</td>
                     <td>{{ item.component_item_description }}</td>
-                    <td>{{ item.run_component_qty|floatformat:1 }}</td>
-                    <td>{{ item.start_time|floatformat:4 }}</td>
+                    <td>{{ item.amt }}</td>
+                    <td>{{ item.run_date|date:"m/d/Y" }}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
-                            <button class="btn btn-secondary lotNumButton" data-desk="Desk_1" 
-                                    data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
-                                    data-line="Dm" data-rundate="{{ item.run_date }}" 
-                                    data-itemcode="{{ item.component_item_code }}" 
-                                    data-desc="{{ item.component_item_description }}" 
-                                    data-totalqty="{{ item.run_component_qty }}"
-                                    >+</button>
+                            <button class="btn btn-secondary lotNumButton" data-desk="Horix"
+                            data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
+                            data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" 
+                            data-itemcode="{{ item.component_item_code }}" 
+                            data-desc="{{ item.component_item_description }}" 
+                            data-totalqty="{{ item.amt }}"
+                            >+</button>
                         </td>
                     {% endif %}
                 </tr>
