--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -7,8 +7,8 @@
                     <th scope="col">PO No.</th>
                     <th scope="col">Blend</th>
                     <th scope="col">Description</th>
-                    <th scope="col">Total Blend Qty</th>
-                    <th scope="col">Start Time</th>
+                    <th scope="col">Blend Qty</th>
+                    <th scope="col">Run Date</th>
                     {% if user.is_staff %}<th scope="col">Create Lot Number</th>{% endif %}
                 </tr>
             </thead>
@@ -18,8 +18,8 @@
                     <td>{{ item.po_number }}</td>
                     <td>{{ item.component_item_code }}</td>
                     <td>{{ item.component_item_description }}</td>
-                    <td>{{ item.run_component_qty|floatformat:1 }}</td>
-                    <td>{{ item.start_time|floatformat:4 }}</td>
+                    <td>{{ item.amt }}</td>
+                    <td>{{ item.run_date|date:"m/d/Y" }}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
                             <button class="btn btn-secondary lotNumButton" data-desk="Horix"
@@ -27,7 +27,7 @@
                             data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" 
                             data-itemcode="{{ item.component_item_code }}" 
                             data-desc="{{ item.component_item_description }}" 
-                            data-totalqty="{{ item.run_component_qty }}"
+                            data-totalqty="{{ item.amt }}"
                             >+</button>
                         </td>
                     {% endif %}
