--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -14,13 +14,15 @@
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/tank-levels">Tank Levels</a></li>
         <li><a class="dropdown-item" href="/core/lot-num-records">Lot Numbers</a></li>
-        <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
-        <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
+        <li><a class="dropdown-item" href="/core/blend-shortages?recordType=blend">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
-        <li><a class="dropdown-item" href="/core/display-all-chemical-locations">View Chemical Locations</a></li>
+        <li><a class="dropdown-item" href="/core/display-ghs-label-search">GHS Labels</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
+        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">All Scheduled Blends</a></li>
+        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Desk_1">Desk 1</a></li>
+        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Desk_2">Desk 2</a></li>
+        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Hx">Horix</a></li>
     </ul>
 </li>
 <li class="nav-item">
