--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -37,7 +37,13 @@
                     </td>
                     <td>{{ item.lot }}</td>
                     <td>{{ item.quantity|floatformat:1 }} gal</td>
-                    <td>{{ item.hourshort|floatformat:1 }}</td>
+                    <td>
+                        {% if item.line == 'Dm'%}
+                            {{ item.run_date|date:"m/d/y" }}
+                        {% else %}
+                            {{ item.hourshort|floatformat:1 }}
+                        {% endif %}
+                    </td>
                     {% if user.is_staff %}
                         <td class="noPrint">
                             <div class="dropdown">
