--- a/app/core/templates/core/inventorycounts/countrecordreport.html
+++ b/app/core/templates/core/inventorycounts/countrecordreport.html
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
             {% for item in count_records_queryset %}
-                <tr {% if not item.counted %}class="notCounted"{% endif %}>
+                <tr {% if item.suspicious %}class="suspicious"{% endif %}>
                     <td>{{ item.item_code }}</td>
                     <td>{{ item.item_description }}</td>
                     <td style="text-align:right;">{{ item.expected_quantity|floatformat:4 }}</td>
