--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -38,9 +38,9 @@
                     <td>{{ item.lot }}</td>
                     <td>{{ item.quantity|floatformat:1 }} gal</td>
                     <td>
-                        {% if item.line == 'Dm' or ('LET' in item.item_description and '(kinpak)' in item.item_description) %}
+                        {% if item.line == 'Dm' %}
                             {{ item.run_date|date:"m/d/y" }}
-                        {% else %}
+                        {% elif 'LET' in item.item_description and '(kinpak)' in item.item_description %}
                             {{ item.hourshort|floatformat:1 }}
                         {% endif %}
                     </td>
