--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -41,6 +41,8 @@
                         {% if item.line == 'Dm' %}
                             {{ item.run_date|date:"m/d/y" }}
                         {% elif 'LET' in item.item_description and '(kinpak)' in item.item_description %}
+                            {{ item.run_date|date:"m/d/y" }}
+                        {% else %}
                             {{ item.hourshort|floatformat:1 }}
                         {% endif %}
                     </td>
