Add units to countlist page.

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -27,7 +27,7 @@
             </div>
             {% csrf_token %}
             <div class="table-responsive-sm">
-                <table class="table text-left table-bordered table-hover">
+                <table class="table text-left table-bordered table-hover" id="countsTable">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" class="text-center">Item Code</th>
