--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -24,6 +24,8 @@ td[class*="expected_quantity"]{
     text-align: right;
 }
 
+td {}
+
 input[name*='counted_date'] {
     width: 90px;
     height: 24px;
