--- a/app/core/templates/core/inventorycounts/countrecordreport.html
+++ b/app/core/templates/core/inventorycounts/countrecordreport.html
@@ -22,19 +22,17 @@
                 <tr>
                     <th scope="col">Item Code</th>
                     <th scope="col">Description</th>
-                    <th scope="col">Expected Qty</th>
-                    <th scope="col">Counted Qty</th>
-                    <th scope="col">Date Counted</th>
+                    <th scope="col">Expected</th>
+                    <th scope="col">Counted</th>
+                    <th scope="col">Date</th>
                     <th scope="col">Variance</th>
                     <th scope="col">Counted By</th>
                     <th scope="col">CID</th>
                     <th scope="col">Variance Cost</th>
-                    <th scope="col">oldest receiptno</th>
-                    <th scope="col">oldest receiptdate</th>
-                    {% if record_type == 'blendcomponent' %}
-                        <th scope="col">% of BI since Inv</th>
-                        <th scope="col">last year inv variance</th>    
-                    {% endif %}
+                    <th scope="col">Oldest Receiptno</th>
+                    <th scope="col">Oldest ReceiptDate</th>
+                    <th scope="col">%_BI</th>
+                    <th scope="col">Last Yr Inv. Adjustment</th>
                 </tr>
             </thead>
             {% for item in count_records_queryset %}
@@ -50,13 +48,11 @@
                     <td {% if item.variance_cost < 0 %}class="negativeCell moneyCell"{% else %}class="moneyCell"{% endif %}>$   {{ item.variance_cost|floatformat:2 }}</td>
                     <td>{{ item.receiptno }}</td>
                     <td>{{ item.receiptdate|date:"m/d/Y" }}</td>
-                    {% if record_type == 'blendcomponent' %}
-                        <td>{{ item.variance_as_percentage_of_BI|floatformat:2 }}</td>
-                        {% if item.variance_last_year == "Not found" %}
-                            <td>{{ item.variance_last_year }}</td>
-                        {% else %}
-                            <td>{{ item.variance_last_year|floatformat:2 }}</td>
-                        {% endif %}
+                    <td><span title="BI txn total since last II or IA txn: {{ item.total_bi_qty_since_last_ii_ia|floatformat:2 }}">{{ item.variance_as_percentage_of_BI|floatformat:4 }}</span></td>
+                    {% if item.variance_last_year == "Not found" %}
+                        <td>{{ item.variance_last_year }}</td>
+                    {% else %}
+                        <td>{{ item.variance_last_year|floatformat:2 }}</td>
                     {% endif %}
                 </tr>
             {% endfor %}
