--- a/app/core/templates/core/reports/transactionmismatches.html
+++ b/app/core/templates/core/reports/transactionmismatches.html
@@ -4,7 +4,7 @@
 {% block title %}<title>Bill of Materials</title>{% endblock %}
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{% static 'core/css/countsAndTransactions.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/transactionMismatch.css' %}">
 <div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
 <div class='text-center'>
     <h1>Transaction Mismatches for:</h1>
@@ -14,27 +14,29 @@
     <thead class="thead-dark">
         <tr>
             <th scope="col">entryno</th>
-            <th scope="col">component_itemcode</th>
+            <th scope="col">itemcode</th>
             <th scope="col">transactiondate</th>
             <th scope="col">timeupdated</th>
             <th scope="col">qtyperbill</th>
-            <th scope="col">transactionqty</th>
-            <th scope="col">calculated_consumed_qty</th>
-            <th scope="col">actual_transaction_qty</th>
+            <th scope="col">parent_transactionqty</th>
+            <th scope="col">theory_component_qty</th>
+            <th scope="col">actual_component_qty</th>
             <th scope="col">discrepancy</th>
+            <th scope="col">percentage</th>
         </tr>
     </thead>
-    {% for item in transaction_mismatches %}
-        <tr>
-            <td>{{ item.0 }}</td>
-            <td>{{ item.1 }}</td>
-            <td>{{ item.2 }}</td>
-            <td>{{ item.3 }}</td>
-            <td>{{ item.4 }}</td>
-            <td>{{ item.5 }}</td>
-            <td>{{ item.6 }}</td>
-            <td>{{ item.7 }}</td>
-            <td>{{ item.8 }}</td>
+    {% for item in parent_item_transactions %}
+        <tr {% if transaction.sus %}class="suspect"{% endif %}>
+            <td>{{ item.entryno }}</td>
+            <td>{{ item.itemcode }}</td>
+            <td>{{ item.transactiondate }}</td>
+            <td>{{ item.timeupdated }}</td>
+            <td>{{ item.qtyperbill|floatformat:2 }}</td>
+            <td>{{ item.transactionqty|floatformat:2 }}</td>
+            <td>{{ item.theory_component_transaction_qty|floatformat:2 }}</td>
+            <td>{{ item.actual_component_transaction_qty|floatformat:2 }}</td>
+            <td>{{ item.discrepancy|floatformat:2 }}</td>
+            <td>{{ item.percentage|floatformat:2 }} %</td>
         </tr>
     {% endfor %}
 </table>
